(styles) - Fix letter spacing tabsSelection

--- a/mobile/src/styles/components/_tabsSelection.scss
+++ b/mobile/src/styles/components/_tabsSelection.scss
@@ -34,6 +34,7 @@
     font-size: 16px;
     height: 40px;
     min-height: 46px;
+    letter-spacing: normal;
     color: var(--app-primary);
     --indicator-color: var(--app-voxxrin);
     --indicator-box-shadow: none;
